grammars/fallout-ssl/test/corpus/preprocessor.txt
==================
Constant macros
==================

#define MAX_VALUE 100
#define MESSAGE "hello"
#define HEX_VALUE 0x1234

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (string)))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number))))))

==================
Function-like macros
==================

#define ndebug(msg) debug_msg(SCRIPT_REALNAME + ": " + msg)
#define add(x, y) (x + y)
#define get_sfall_arg_at(index) sfall_func1("get_sfall_arg_at", index)

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (binary_expr
              left: (binary_expr
                left: (identifier)
                right: (string))
              right: (identifier)))))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier)
        (identifier))
      body: (macro_body
        (expression_stmt
          (paren_expr
            (binary_expr
              left: (identifier)
              right: (identifier)))))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (string)
            args: (identifier)))))))

==================
Mixed macros
==================

#define SCRIPT_REALNAME "gl_g_auto_cursor"
#define DIK_M 50
#define ndebug(msg) debug_msg(SCRIPT_REALNAME + ": " + msg)
#define dude_elevation elevation(dude_obj)
#define set_cursor_mode(mode) sfall_func1("set_cursor_mode", mode)
#define fo2tweaks_ini "mods\\fo2tweaks.ini"

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (string)))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (binary_expr
              left: (binary_expr
                left: (identifier)
                right: (string))
              right: (identifier)))))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (identifier))))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (string)
            args: (identifier))))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (string))))))

==================
Include directives
==================

#include "sfall.h"
#include <define.h>

---

(source_file
  (preprocessor
    (include
      path: (string)))
  (preprocessor
    (include
      path: (string))))

==================
Ifdef endif
==================

#ifdef MY_MACRO
#define RESULT 1
#endif

---

(source_file
  (preprocessor
    (ifdef
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (endif)))

==================
Ifndef guard
==================

#ifndef GUARD_H
#define GUARD_H
#define VALUE 42
#endif

---

(source_file
  (preprocessor
    (ifndef
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (endif)))

==================
Ifdef else endif
==================

#ifdef DEBUG
#define LOG(msg) debug_msg(msg)
#else
#define LOG(msg)
#endif

---

(source_file
  (preprocessor
    (ifdef
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (identifier))))))
  (preprocessor
    (pp_else))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))))
  (preprocessor
    (endif)))

==================
Undef directive
==================

#undef MY_MACRO

---

(source_file
  (preprocessor (undef name: (identifier))))

==================
Preprocessor inside procedure
==================

procedure foo begin
    #ifdef DEBUG
    debug_msg("test");
    #endif
end

---

(source_file
  (procedure
    name: (identifier)
    body: (preprocessor (ifdef name: (identifier)))
    body: (expression_stmt (call_expr func: (identifier) args: (string)))
    body: (preprocessor (endif))))

==================
Multiline macro
==================

#define complex_macro(a, b) \
    variable temp; \
    temp := a + b; \
    return temp;

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier)
        (identifier))
      body: (macro_body
        (variable_decl
          (var_init
            name: (identifier)))
        (assignment
          left: (identifier)
          right: (binary_expr
            left: (identifier)
            right: (identifier)))
        (return_stmt
          (identifier))))))
